# ffmpegThumbnail

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  cmdline.h  ffmpegThumbnail.cpp  ffmpegThumbnail.h
